# hf-adapter

./: .gitignore  AGENTS.md  BENCHMARK.md  BLACKWELL_50SERIES.md  CONTRIBUTING.md  CONTRIBUTIONS.md  CONTRIBUTORS.md  FUSED_BACKEND.md  HF_CRITERIA.md  HF_STATUS.md  HF_TODO.md  LICENSE  NEXT_STEPS.md  README.md  README_ZH.md  TODO_DPLR_WY.md  V100_HF_VALIDATION.md  pyproject.toml
bench/: 4090_validation_summary.md  INDEX.md  README.md  analyze_math500_gap.py  analyze_math500_sampling_variance.py  analyze_results.py  apple_clean_install_apple_m5_20260712.jsonl  apple_clean_install_apple_m5_rows_20260712.jsonl  apple_clean_install_full_m5_20260712.jsonl  apple_mps_adapter_roundtrip_m5_20260712.jsonl  apple_mps_peft_methods_m5_20260712.jsonl  apple_mps_training_m5_20260712.jsonl  apple_production_close_fp16_04_m5_20260711.jsonl  apple_production_close_groupwise_compiled_w4_04_m5_20260711.jsonl  apple_production_close_groupwise_w4_15_m5_20260711.jsonl  apple_production_close_groupwise_w8_15_m5_20260711.jsonl  apple_production_close_qwen08_m5_20260711.jsonl  apple_production_close_qwen2_m5_20260711.jsonl  apple_production_close_qwen35_gate_m5_20260711.jsonl  apple_production_close_speculative_w4_15_m5_20260711_final.jsonl  apple_production_gates.json  apple_quant_quality_q4km_m5_20260712.jsonl  audit_qwen35_apple_goal.py  bench.py  bench_albatross.py  bench_albatross_linear_orig_layout.py  bench_albatross_projection_layout.py  bench_batch.py  bench_batch_sweep.py  bench_chunked_prefill.py  bench_cross_model_speed.py  bench_cross_model_speed_resident.py  bench_cuda_state_scan_micro.py  bench_decode_breakdown.py  (+295 more)
(+1498 files in other folders)
